--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,10 @@
 {
-    "functions": {
-      "app/api/upload/route.ts": {
-        "maxDuration": 30
-      }
+  "functions": {
+    "app/api/upload/route.ts": {
+      "maxDuration": 30
     },
-    "api": {
-      "bodyParser": {
-        "sizeLimit": "50mb"
-      }
+    "app/api/download/[slug]/route.ts": {
+      "maxDuration": 30
     }
+  }
 }
